Prevented the popover example link from wrapping.

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -275,5 +275,5 @@ div[block-registration], div[block-editor] {
 }
 
 .popup-custom-width .popover{
-  max-width: 380px !important;
+  max-width: 550px !important;
 }
